# voronoi

./: README.md
code/: CGAL-dt2.h  CGAL-dt3.h  CGAL-rt2.h  CGAL-rt3.h  CMakeLists.txt  io.h  knn.hpp  power2-demo.cpp  power3-demo.cpp  powers-demo.cpp  timer.h  trimesh.h  voronoi2-demo.cpp  voronoi3-demo.cpp  voronois-demo.cpp  xlog.h
code/voronoi/: bitbools.hpp  facet.hpp  lift.h  polymesh.hpp  power-knn.hpp  voronoi-dt.hpp  voronoi-knn.hpp  voronoi.hpp
example/fertility/: fertility-tets.txt  run-add-column.bat  run-power3-demo.bat  run-voronoi3-demo.bat  v5k.xyz  v5k.xyzw
example/kitten/: kitten.off  powers-knn-omp.off  powers-knn.off  powers-rt-omp.off  powers-rt.off  run-add-column.bat  run-powers-demo.bat  run-voronois-demo.bat  v5k.xyz  v5k.xyzw
example/rect/: rect.txt  run-add-column.bat  run-power2-demo.bat  run-voronoi2-demo.bat  v1k.xy  v1k.xyw
